2002-11-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* NEWS:
	updated for 2.4.13

	* fvwm/functable.c (func_table):
	* fvwm/commands.h:
	* fvwm/style.c (style_parse_one_style_option):
	(parse_and_set_window_style):
	(__style_command):
	(CMD_Style):
	(CMD_FocusStyle):
	added a new command FocusStyle as a shorthand for
	"Style * FP..., FP..."

	* fvwm/builtins.c (__parse_vector_line_one_coord):
	(__parse_vector_line):
	(ReadDecorFace):
	split vector line parsing into sub functions
	(FreeDecorFace):
	fixed core dump in vector button offset patch

2002-11-01  Marcus Lundblad <ml@update.uu.se>

	* fvwm/screen.h (vector_coords):
	added fields for offsets
	* fvwm/builtins.c (ReadDecorFace):
	rewrote parser for vector definitions to accept optional offsets
	* fvwm/fvwm.c (LoadDefaultLeftButton):
	(LoadDefaultRightButton)
	set default values for offsets
	* fvwm/borders.c (border_draw_vector_to_pixmap):
	updated XDrawLine call to take offsets into account
	* fvwm/fvwm.1.in:
	documented new options for vector offsets

2002-11-01  olicha  <olivier.chapuis@free.fr>

	* libs/PictureGraphics.c (PGraphicsRenderPixmaps):
	Fixed icon tint pixel, it was set to icon tint percent during some
	renaming

2002-10-31  olicha  <olivier.chapuis@free.fr>

	* libs/PictureUtils.c (PictureAllocColorImage):
	(PictureOpenImageColorAllocator):
	(PictureCloseImageColorAllocator):
	* libs/PictureImageLoader.c (PImageCreatePixmapFromArgbData):
	(FIMAGE_CMD_ARGS):
	(PImageLoadXpm):
	(PImageCreatePixmapFromArgbData):
	(PImageLoadPixmapFromFile):
	* libs/PictureBase.h (FvwmPictureThing):
	(PictureImageColorAllocator):
	* libs/Picture.h:
	* libs/Picture.c (PDestroyFvwmPicture):
	(PLoadFvwmPictureFromPixmap):
	* libs/Graphics.c (CreateGradientPixmap):
	* fvwm/fvwm.c:
	* fvwm/ewmh_icons.c (EWMH_SetIconFromWMIcon):
	Added a new way to allocate colors for image and gradient. This method
	allows, in particular, to save (in a "fast" way) the allocated pixels
	with a minimal memory usage.