@@ -4,8 +4,5 @@ SUBDIRS = \
 	FvwmAnimate FvwmAuto FvwmBacker FvwmBanner FvwmButtons FvwmCommand \
 	FvwmConsole FvwmCpp FvwmDebug FvwmDragWell FvwmEvent FvwmForm \
 	FvwmGtk FvwmIconBox FvwmIconMan FvwmIdent FvwmM4 FvwmPager \
-	FvwmPerl FvwmRearrange FvwmSave FvwmSaveDesk FvwmScript \
+	FvwmPerl FvwmProxy FvwmRearrange FvwmSave FvwmSaveDesk FvwmScript \
 	FvwmScroll FvwmTaskBar FvwmTheme FvwmWharf FvwmWinList
-
-nodist_SUBDIRS = \
-	FvwmProxy
