@@ -1,3 +1,15 @@
+2002-11-04  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* Makefile.am:
+	build and install FvwmProxy
+
+	* FvwmProxy/FvwmProxy.c:
+	rewrote the window list handling to fix race conditions
+	(OpenWindows):
+	do not set the WMNormalHints - the proxies are override_redirect
+	(delete_ProxyWindow):
+	fixed memory leak
+
 2002-11-01  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmPager/x_pager.c (DrawGrid):
