@@ -1,3 +1,10 @@
+2002-11-04  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* libs/Module.h (struct):
+	new type FvwmWinPacketBodyHeader to access the standard fields in a
+	packet with a window
+
+
 2002-11-01  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* NEWS:
